2023-05-29  Release Manager

	* GCC 11.4.0 released.

2023-05-21  Iain Sandoe  <iain@sandoe.co.uk>

	Backported from master:
	2023-05-19  Iain Sandoe  <iain@sandoe.co.uk>

	* config.host: Arrange to set min Darwin OS versions from
	the configured host version.
	* config/darwin10-unwind-find-enc-func.c: Do not use current
	headers, but declare the nexessary structures locally to the
	versions in use for Mac OSX 10.6.
	* config/t-darwin: Amend to handle configured min OS
	versions.
	* config/t-darwin-min-1: New.
	* config/t-darwin-min-5: New.
	* config/t-darwin-min-8: New.

2023-05-16  Iain Sandoe  <iain@sandoe.co.uk>

	Backported from master:
	2022-12-24  Iain Sandoe  <iain@sandoe.co.uk>

	* config/t-slibgcc-darwin (install-darwin-libgcc-stubs): Skip the
	install of libgcc_s.1.dylib when the installation is into the build
	gcc directory.

2022-05-16  Sebastian Pop  <spop@amazon.com>

	PR target/105162
	* config/aarch64/lse.S: Define BARRIER and handle memory MODEL 5.
	* config/aarch64/t-lse: Add a 5th memory model for _sync functions.

2022-04-21  Release Manager

	* GCC 11.3.0 released.

2022-04-14  Iain Sandoe  <iain@sandoe.co.uk>

	* config.host: Add weak emutls crt to the extra_parts.
	(*-*-darwin*): Add logic to build a shared unwinder library for
	Darwin8-10.  Add shim declaration header to powerpc*-darwin builds.
	* config/i386/darwin-lib.h (DECLARE_LIBRARY_RENAMES): Remove
	workaround.
	* config/libgcc-libsystem.ver: Add exclude list for the system-
	provided unwinder.
	* config/t-slibgcc-darwin: Bump SO version, remove stubs code.
	Build a legacy libgcc_s.1 and the supporting pieces (all FAT libs).
	* config/t-darwin-ehs: Add dependencies to the shared unwinder
	objects.  Add dependency on unwind.h.
	* config/t-darwin: Reorganise the EH fragments to place them for
	inclusion in a shared EH lib.  Add libgcc_tm.h to the dependencies
	for darwin10-unwind-find-enc-func.
	* config/i386/libgcc-darwin.10.4.ver: Removed.