@@ -1,3 +1,15 @@
+2024-07-19  Release Manager
+
+	* GCC 11.5.0 released.
+
+2024-06-12  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
+	Backported from master:
+	2024-06-06  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
+	PR target/115360
+	* config/arm/cmse_nonsecure_call.S: Add .type and .size directives.
+
 2023-05-29  Release Manager
 
 	* GCC 11.4.0 released.
